--- a/curso-es6/public/index.html
+++ b/curso-es6/public/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
-    <button id="novotodo">Adicionar</button>
-
-    <script src="./bundle.js"></script>
-
+   <form id="repo-form">
+       <input type="text" name="repository" />
+       <button type="submit">Adicionar</button>
+   </form>   
+   <ul id="repo-list"></ul>
+   <script src="./bundle.js"></script>  
 </body>
 </html>
