--- a/MaratonaDev/index.html
+++ b/MaratonaDev/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <header>
-        <h1>DOE</h1>
+        <img class="logo" src="logo.png" alt="Imagem de DOE">
         <h2>A sua doação importa!</h2>
         <p>Até 3 vidas com 1 doação</p>
         <p>Mais de 38.000 doações são necessárias todos os dias</p>
@@ -32,7 +32,7 @@
         <button>Quero ajudar</button>
     </header>
 
-    <section class="form">
+    <section class="form hide">
         <h2>Entre na lista de doadores</h2>
         <form action="/">
             <input type="text" name="name" placeholder="Nome Completo">
@@ -44,7 +44,7 @@
 
 
     <main>
-        <h2>Últimos doadores</h2>
+        <h2>Últimos <span>doadores</span></h2>
 
         <section class="donors">
             <div class="donor">
@@ -63,11 +63,12 @@
                 <div class="blood">O+</div>
                 <p>Mayk Brito</p>
             </div>
-
         </section>
     </main>
     
     <footer>Com ❤️ Rocketseat</footer>
+
+    <script src="scripts.js"></script>
 
 </body>
 
